# james-in-a-box

./: .actrc  .codebase-analyzer-cache.json  .dockerignore  .gitignore  .hadolint.yaml  .yamllint.yaml  ADR-Autonomous-Software-Engineer.md  BIDIRECTIONAL-SLACK.md  Dockerfile  HOST-SLACK-NOTIFIER.md  INTEGRATION-SUMMARY.md  ISSUES-FOUND.md  MIGRATION-SYSTEMD.md  MIGRATION-TO-JIB.md  MIGRATION.md  Makefile  PLAN-setup-incognito.md  QUICKSTART.md  README.md  TODO.md  UPGRADE-NOTES.md  WORKFLOW.md  adr-autonomous-engineer-session.md  apply-staged-changes.sh  claude-sandboxed  gateway-private-mode-gap-analysis.md  jib  pyproject.toml  pytest.ini  setup.py  setup.sh  test-humanizer.txt  test-pr-comments.txt
host-services/: README.md  pyproject.toml  venv-setup.service  venv-setup.sh
host-services/analysis/adr-researcher/: README.md  adr-researcher.py  adr-researcher.service  adr-researcher.timer  setup.sh
host-services/analysis/analyze-pr/: README.md  analyze-pr
host-services/analysis/beads-analyzer/: README.md  beads-analyzer.py  beads-analyzer.service  beads-analyzer.timer  setup.sh
host-services/analysis/codebase-analyzer/: README.md  codebase-analyzer.py  codebase-analyzer.service  codebase-analyzer.timer  requirements.txt  setup.sh
host-services/analysis/confluence-doc-discoverer/: confluence-doc-discoverer.py  setup.sh
host-services/analysis/conversation-analyzer/: README.md  conversation-analyzer.py  conversation-analyzer.service  conversation-analyzer.timer  setup.sh
host-services/analysis/doc-generator/: doc-generator.py  drift-detector.py  research-schedule.yaml  setup.sh
host-services/analysis/feature-analyzer/: README.md  adr_watcher.py  doc_generator.py  feature-analyzer-watcher.service  feature-analyzer-watcher.timer  feature-analyzer-weekly.service  feature-analyzer-weekly.timer  feature-analyzer.py  feature_doc_generator.py  pr_creator.py  rollback.py  setup.sh  test_weekly_analyzer.py  weekly_analyzer.py
host-services/analysis/github-watcher/: README.md  ci-fixer.service  ci-fixer.timer  ci_fixer.py  comment-responder.service  comment-responder.timer  comment_responder.py  dispatcher.py  github-watcher.py  github-watcher.service  github-watcher.timer  pr-reviewer.service  pr-reviewer.timer  pr_reviewer.py  setup.sh
host-services/analysis/index-generator/: index-generator.py  query-index.py  setup.sh
host-services/analysis/inefficiency-detector/: README.md  __init__.py  base_detector.py  impact_tracker.py  improvement_proposer.py  inefficiency-reporter.service  inefficiency-reporter.timer  inefficiency_detector.py  inefficiency_schema.py  proposal_schema.py  setup.sh  test_detectors.py  test_phase4.py  weekly_report_generator.py
host-services/analysis/log-analyzer/: README.md  __init__.py  error_classifier.py  error_extractor.py  log_aggregator.py  log_analyzer.py
host-services/analysis/repo-onboarding/: README.md  docs-index-updater.py  jib-internal-devtools-setup  jib-regenerate-indexes  setup.sh
host-services/analysis/spec-enricher/: setup.sh  spec-enricher.py
host-services/analysis/trace-collector/: README.md  __init__.py  hook_handler.py  schemas.py  setup.sh  trace_collector.py  trace_reader.py
host-services/analyze-pr/: analyze-pr
host-services/cli/analyze-pr/: README.md
host-services/codebase-analyzer/: README.md  codebase-analyzer.py  codebase-analyzer.service  codebase-analyzer.timer
host-services/context-sync/: .gitignore  README.md  context-sync.service  context-sync.timer  manage_scheduler.sh  setup.sh
host-services/conversation-analyzer/: README.md  conversation-analyzer.service  requirements.txt
host-services/gateway-sidecar/: Dockerfile  README.md  __init__.py  entrypoint.sh  gateway-sidecar.service  gateway.py  github_client.py  policy.py  setup.sh
host-services/github-sync/: README.md  github-sync.service  setup.sh  sync.py
host-services/service-monitor/: README.md  service-failure-notify@.service  setup.sh
host-services/shared/: __init__.py  container_utils.py  git_utils.py  jib_claude.py  jib_exec.py
host-services/slack-notifier/: README.md  host-notify-slack.py  slack-notifier.service
host-services/slack-receiver/: README.md  create-pr.sh  host-receive-slack.py  remote-control.sh  slack-receiver.service
host-services/sync/context-sync/: Makefile  (+6 more)
host-services/worktree-watcher/: README.md  worktree-watcher.service  worktree-watcher.timer
jib-container/: Dockerfile  README.md  docker-setup.py  entrypoint.py  entrypoint.sh  jib  pyproject.toml  requirements-lockdown.txt  statusbar.py  view-logs
jib-container/.claude/: README.md
jib-container/claude/: __init__.py  runner.py
jib-container/components/: incoming-processor.py
jib-container/jib-tasks/: claude-runner.py
jib-container/jib-tools/: comment-pr-helper.py  create-pr-helper.py  discover-tests.py  github-app-token.py
jib-container/jib_lib/: __init__.py  auth.py  cli.py  config.py  container_logging.py  docker.py  gateway.py  network_mode.py  output.py  runtime.py  setup_flow.py  timing.py  worktrees.py
jib-container/llm/: __init__.py  config.py  result.py  runner.py
jib-container/scripts/: README.md  analyze-sprint.py  comment-pr-helper.py  create-pr-helper.py  gh  gh-stub  git  git-credential-github-token  git-stub  humanize-text  jib-logs  mcp-token-watcher.py
jib-container/shared/: __init__.py  notifications.py
jib-container/tests/: __init__.py
shared/: github_auth.py  pyproject.toml
shared/beads/: __init__.py  pr_context.py
shared/claude/: __init__.py  runner.py
shared/claude_runner/: __init__.py  runner.py
shared/enrichment/: __init__.py  enricher.py
shared/git_utils/: __init__.py  default_branch.py
shared/jib_config/: README.md  __init__.py  base.py  cli.py  config.py  registry.py  utils.py  validators.py
shared/jib_humanizer/: __init__.py  humanizer.py
shared/jib_logging/: __init__.py  cli.py  context.py  formatters.py  log_client.py  logger.py  model_capture.py  signatures.py
shared/notifications/: __init__.py  base.py  slack.py  types.py
shared/text_utils/: __init__.py  chunking.py  frontmatter.py
(+712 files in other folders)
