# Python project configuration and linting setup

[project]
name = "james-in-a-box"
version = "0.1.0"
description = "Autonomous software engineering agent for Khan Academy"
requires-python = ">=3.11"

[tool.ruff]
# Target Python version
target-version = "py311"

# Line length - match common Python conventions
line-length = 100

# Exclude common directories
exclude = [
    ".git",
    ".venv",
    "venv",
    "__pycache__",
    ".eggs",
    "*.egg-info",
    "build",
    "dist",
]

[tool.ruff.lint]
# Enable recommended rule sets
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "SIM",    # flake8-simplify
    "RUF",    # Ruff-specific rules
    "PIE",    # flake8-pie
    "PL",     # pylint subset
    "PT",     # flake8-pytest-style
    "TCH",    # flake8-type-checking
]

ignore = [
    "E501",    # Line too long - handled by formatter
    "PLR0913", # Too many arguments - common in CLI tools
    "PLR2004", # Magic value comparison - too noisy
    "B008",    # Function call in default argument - needed for argparse
    "SIM108",  # Ternary operator - readability preference
]

# Allow autofix for all enabled rules
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.per-file-ignores]
# Tests can use assert and have more relaxed style
"**/tests/**/*.py" = ["S101", "PLR2004"]
# Scripts can have print statements
"**/jib-tools/*.py" = ["T201"]
"**/jib-tasks/**/*.py" = ["T201"]

[tool.ruff.lint.isort]
# Group imports
known-first-party = ["config", "shared", "notifications"]
force-single-line = false
lines-after-imports = 2

[tool.ruff.format]
# Use double quotes for strings
quote-style = "double"
# Indent with spaces
indent-style = "space"
# Unix line endings
line-ending = "lf"
