# Python project configuration and linting setup

[project]
name = "james-in-a-box"
version = "0.1.0"
description = "Autonomous software engineering agent"
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0",  # Required for all config files
]

[tool.ruff]
# Target Python version
target-version = "py311"

# Line length - match common Python conventions
line-length = 100

# Exclude common directories
exclude = [
    ".git",
    ".venv",
    "venv",
    "__pycache__",
    ".eggs",
    "*.egg-info",
    "build",
    "dist",
]

[tool.ruff.lint]
# Enable recommended rule sets
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "SIM",    # flake8-simplify
    "RUF",    # Ruff-specific rules
    "PIE",    # flake8-pie
    "PL",     # pylint subset
    "PT",     # flake8-pytest-style
    "TCH",    # flake8-type-checking
]

ignore = [
    "E501",    # Line too long - handled by formatter
    "PLR0913", # Too many arguments - common in CLI tools
    "PLR2004", # Magic value comparison - too noisy
    "B008",    # Function call in default argument - needed for argparse
    "SIM108",  # Ternary operator - readability preference
    # The following are common patterns in this CLI-heavy codebase:
    "E741",    # Ambiguous variable name - `l` used for log, list, etc.
    "E402",    # Module import not at top - needed for path setup in scripts
    "E722",    # Bare except - used for broad error handling in CLI tools
    "PLR0912", # Too many branches - complex main functions in CLI tools
    "PLR0915", # Too many statements - complex main functions in CLI tools
    "PLR0911", # Too many return statements - complex logic functions
    "PLC0415", # Import outside top-level - lazy/conditional imports
    "PLW2901", # Redefined loop variable - intentional in some cases
    "PLW0603", # Global statement - used for singletons
    "RUF005",  # Collection literal concatenation - readability preference
    "RUF012",  # Mutable class default - acceptable in this codebase
]

# Allow autofix for all enabled rules
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.per-file-ignores]
# Tests can use assert and have more relaxed style
"**/tests/**/*.py" = ["S101", "PLR2004", "SIM117"]
# Scripts can have print statements
"**/jib-tools/*.py" = ["T201"]
"**/jib-tasks/**/*.py" = ["T201"]

[tool.ruff.lint.isort]
# Group imports
known-first-party = ["config", "shared", "notifications"]
force-single-line = false
lines-after-imports = 2

[tool.ruff.format]
# Use double quotes for strings
quote-style = "double"
# Indent with spaces
indent-style = "space"
# Unix line endings
line-ending = "lf"
