[project]
name = "jib-container"
version = "0.1.0"
description = "Jib container-side modules including the Claude runner"
requires-python = ">=3.11"
dependencies = []

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["claude*"]
